# degen

./: .env.example  .gitignore  CONSTITUTION.md  HANDOFF.md  JOURNAL.example.md  JOURNAL.md  MACRO.md  POSITIONS.example.md  POSITIONS.md  README.md  WATCHLIST.example.md  WATCHLIST.md  cta_levels.example.json  cta_levels.json  memory_prices.example.json  pyproject.toml  retail_attention.example.json  roi_coverage.example.json  tickers.txt
.agents/skills/daily-debrief/: SKILL.md
.agents/skills/introduction/: SKILL.md
docs/: INDEX.md  PRODUCT_HANDOFF.md
docs/daily/: 2026-06-05.md  2026-06-09.md  2026-06-10.md  2026-06-18.md  2026-06-21.md  2026-06-22-weekly-outlook.md  2026-06-22.md  2026-06-23.md
docs/inputs/: _template.md
docs/inputs/2026-06/: 2026-05-26-inspector-lee-cyclical-barbell.md  (+3 more)
docs/theses/: _template.md  abvx-ph3-idio.md  ai-infra-cycle-top.md  amzn-ta-equity.md  crm-dinosaur-rerate.md  memory-supercycle.md  miners-ai-compute.md  mstr-strc-contagion.md  nail-housing-cyclical.md  noc-ta-idio.md
scripts/: com.degen.iv-snapshot.plist  discord_diag.py  privacy_scan.py
scripts/hooks/: pre-commit
src/degen/: __init__.py  ai_demand.py  daily.py  dashboard.py  data.py  discord_log.py  edgar.py  etrade.py  greeks.py  health.py  heat.py  iv_store.py  macro.py  size.py  webexport.py
src/degen/ingest/: __init__.py  (+3 more)
tests/: test_gauges.py  test_greeks.py
web/: .env.example  .gitignore  DEPLOY.md  README.md  eslint.config.mjs  nuxt.config.ts  package-lock.json  package.json
web/app/: app.vue
web/scripts/: seed.mjs
web/supabase/: schema.sql
(+16 files in other folders)
